fixing horizontal scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,7 @@
 	text-align: center;
 }
 
-html {
-	width: 100vw;
-}
+
 
 .App-logo {
 	height: 40vmin;
